kubernetes/deployment.yml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: eshop-app
#   namespace: eshop
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: eshop-app
#   template:
#     metadata:
#       labels:
#         app: eshop-app
#     spec:
#       containers:
#         - name: eshop-app
#           image: anastasija1701/eshop-app:latest
#           ports:
#             - containerPort: 80
#           env:
#             - name: ASPNETCORE_ENVIRONMENT
#               valueFrom:
#                 configMapKeyRef:
#                   name: eshop-config
#                   key: ASPNETCORE_ENVIRONMENT
#             - name: ConnectionStrings__DefaultConnection
#               valueFrom:
#                 configMapKeyRef:
#                   name: eshop-config
#                   key: ConnectionStrings__DefaultConnection
#             - name: SA_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: eshop-secrets
#                   key: SA_PASSWORD
#           resources:
#             limits:
#               memory: "512Mi"
#               cpu: "500m"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-app
  namespace: eshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eshop-app
  template:
    metadata:
      labels:
        app: eshop-app
    spec:
      containers:
        - name: eshop-app
          image: anastasija1701/eshop-app:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
