kubernetes/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sql-server
  namespace: eshop
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: sql-server
  template:
    metadata:
      labels:
        app: sql-server
    spec:
      containers:
        - name: sql-server
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: sql-data
              mountPath: /var/opt/mssql
  volumeClaimTemplates:
    - metadata:
        name: sql-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
