kubernetes/sql-service.yml
apiVersion: v1
kind: Service
metadata:
  # name: sql-service
  name: db 
  namespace: eshop
spec:
  selector:
    app: sql-server
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  clusterIP: None
